# Sonic-The-Hedgehog-en-C

./: .gitignore  CMakeLists.txt  MakeFile  README.md  main.c  maputils.c  sprites.c  stdout.txt
include/: green_hill.h  maputils.h  sprites.h  title.h
src/: green_hill.c  main.c  maputils.c  sprites.c  title.c
